test/Fail/Issue4012.err
Issue4012.agda:27.8-12: error: [UnequalTerms]
f != g of type D
when checking that the expression refl has type f ≡ g
